--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>webpack starterkit</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Japan</title>
 </head>
+
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <div class="scene" id="scene">
+    <div class="scene__layer layer" data-depth="0">
+      <img class="layer__image layer__image--volcano" src="./img/bg1.png" alt="Volcano" />
+    </div>
+    <div class="scene__layer layer" data-depth="0.05">
+      <img class="layer__image layer__image--first-mountain" src="./img/bg2.png" alt="First mountain" />
+    </div>
+    <div class="scene__layer layer" data-depth="0.10">
+      <img class="layer__image layer__image--second-mountain" src="./img/bg3.png" alt="Second mountain" />
+    </div>
+    <div class="scene__layer layer" data-depth="0.15">
+      <img class="layer__image layer__image--third-mountain" src="./img/bg4.png" alt="Third mountain" />
+    </div>
+    <div class="scene__layer layer" data-depth="0.20">
+      <img class="layer__image layer__image--fourth-mountain" src="./img/bg5.png" alt="Fourth mountain" />
+    </div>
+    <div class="scene__layer layer" data-depth="0.25">
+      <img class="layer__image layer__image--fifth-mountain" src="./img/bg6.png" alt="Fifth mountain" />
+    </div>
+    <div class="scene__layer layer" data-depth="0">
+      <img class="layer__image layer__image--sun" src="./img/sun.png" alt="Sun" />
+    </div>
+    <div class="scene__layer layer" data-depth="0.30">
+      <img class="layer__image layer__image--first-cloud" src="./img/cloud1.png" alt="First cloud" />
+    </div>
+    <div class="scene__layer layer" data-depth="0.30">
+      <img class="layer__image layer__image--first-cloud layer__image--first-cloud-initial" src="./img/cloud1.png"
+        alt="First cloud" />
+    </div>
+    <div class="scene__layer layer" data-depth="0.30">
+      <img class="layer__image layer__image--second-cloud" src="./img/cloud2.png" alt="Second cloud" />
+    </div>
+    <div class="scene__layer layer" data-depth="0.30">
+      <img class="layer__image layer__image--second-cloud layer__image--second-cloud-initial" src="./img/cloud2.png"
+        alt="Second cloud" />
+    </div>
+    <div class="scene__layer layer" data-depth="0.40">
+      <img class="layer__image layer__image--japan-sign" src="./img/japan-sign.png" alt="Japan sign" />
+    </div>
+  </div>
 </body>
+
 </html>
