Add tree and it's animation

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,9 @@
     <div class="scene__layer layer" data-depth="0.40">
       <img class="layer__image layer__image--japan-sign" src="./img/japan-sign.png" alt="Japan sign" />
     </div>
+    <div class="scene__layer layer" data-depth="0.40">
+      <img class="layer__image layer__image--tree" src="./img/tree.png" alt="Bird sitting on the branch" />
+    </div>
   </div>
 </body>
 
